homepage changed in packages json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "currency-converter",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/prasanth35/currency-converter",
+  "homepage": "  https://prasanth35.github.io/currency-converter",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
